<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.huuugeae.das.vm.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.huuugeae.das.widget.RelativeView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title_text="login"
            app:title_text_color="@color/black" />

        <com.huuugeae.das.widget.RoundedImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:src="@mipmap/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            app:layout_constraintBottom_toTopOf="@id/password_login_layout"

            />

        <LinearLayout
            android:id="@+id/password_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:padding="@dimen/dp_10"
                android:background="@drawable/shape_hollow_gray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_account"
                    android:textColor="#ff666666"
                    android:textSize="@dimen/sp_15"/>

                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_48"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/dp_25"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_15"
                    android:text="@={viewModel.accountObserve}"
                    android:background="@null"
                    android:inputType="text"
                    android:hint="@string/input_account"
                    android:importantForAutofill="no"
                    android:layout_marginLeft="@dimen/dp_25" />

                <ImageView
                    android:id="@+id/clear_account_iv"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/dp_5" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:padding="@dimen/dp_10"
                android:background="@drawable/shape_hollow_gray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_48"
                    android:gravity="center_vertical"
                    android:text="@string/login_password"
                    android:textColor="#ff666666"
                    android:textSize="@dimen/sp_15"/>

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_48"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/dp_25"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_15"
                    android:text="@={viewModel.passwordObserve}"
                    android:background="@null"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    android:hint="@string/input_password"
                    android:importantForAutofill="no"
                    android:layout_marginLeft="@dimen/dp_25" />

                <ImageView
                    android:id="@+id/clear_password_iv"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/dp_5" />


            </LinearLayout>

            <TextView
                android:id="@+id/login_main_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:gravity="center"
                android:background="@drawable/shape_frame_bg"
                android:text="@string/login_btn"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_18"
                binding:onClickCommand="@{viewModel.login}"/>

            <TextView
                android:id="@+id/v_code_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_44"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:gravity="center_vertical"
                android:text="@string/v_code_login"
                android:textColor="#ff666666"
                android:textSize="@dimen/sp_14"
                android:onClick="@{() -> viewModel.switchLoginMode()}"/>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>